--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -99,6 +99,15 @@ padding: 16px 15px 16px 14px;
     background-color: #7f6600;
 }
 
+.navbar-collapse{
+    background-color: #7f6600;
+    z-index:100;
+}
+
+.navbar-default .navbar-nav>li>a{
+    background-color: #7f6600;
+
+}
 .content{
     margin:auto;
     width:95%;
@@ -108,17 +117,18 @@ padding: 16px 15px 16px 14px;
 /*#region Cart */
 .menu-cart {
     position: relative;
-    top: -5px;
+    top: -80px;
     border-radius: 4px;
-    float: right;
     margin-right: 10px;
     height: 60px;
+    width: 245px;
     display: block;
     line-height: 16px;
     background: #ffcc00 url(https://lh3.googleusercontent.com/-dUX23H-zKxs/ToTuES-9aaI/AAAAAAAAAB0/28AzfxgjNlI/h80/basket.png) no-repeat 8px center;
     border: 1px solid #ff9900;
     color: #111;
     padding: 12px 12px 12px 45px;
+    z-index: 99;
 }
 
 .menu-cart a.mycart {
@@ -297,6 +307,10 @@ box-shadow: inset 0 2px 2px rgba(0,0,0,.075);
 .accordion-toggle:hover{
     text-decoration:none;
 }
+
+.btn-login{
+    margin-top: -12px;
+}
 /*#endregion */
 
 /*#region Modal error */
@@ -313,6 +327,12 @@ box-shadow: inset 0 2px 2px rgba(0,0,0,.075);
 @media (max-width: 1200px) {
   .navbar-default .navbar-nav>li>a {
     padding-left: 5px;
+  }
+}
+
+@media (max-width: 1084px) {
+  .menu-cart{
+    top: 0;
   }
 }
 
