Añadí frase  "Si necesitas añadir...

--- a/public/views/orders.html
+++ b/public/views/orders.html
@@ -6,6 +6,9 @@
 <p>
     Para repetir un pedido, sólo debes seleccionarlo y hacer click en "Repetir Pedido"
 </p>
+<p>
+    Si necesitas añadir algún producto, haz click en "Inicio"
+</p>
 <br />
 <accordion close-others="false">
     <accordion-group ng-repeat="order in orders">
