--- a/public/backend/views/orders.html
+++ b/public/backend/views/orders.html
@@ -1,6 +1,7 @@
 ﻿<h2>Pedidos</h2>
 <table class="table table-striped">
     <tr>
+        <td>Creado</td>
         <td>Nombre</td>
         <td>Email</td>
         <td>Telefono</td>
@@ -10,7 +11,8 @@
         <td></td>
     </tr>
     <tbody ng-repeat="order in orders">
-        <tr ng-click="isCollapsed$index = !isCollapsed$index" class="clickable">
+        <tr >
+            <td>{{order.date | date:'dd/MM/yyyy - H:mm'}}</td>
             <td>{{order.user.name}}</td>
             <td>{{order.user.email}}</td>
             <td>{{order.user.phone}}</td>
@@ -18,7 +20,8 @@
             <td>{{order.user.comments}}</td>
             <td>{{order.status || 'Pendiente'}}</td>
             <td>
-                Ver |
+                <a ng-click="isCollapsed$index = !isCollapsed$index" ng-hide="isCollapsed$index" class="clickable">Ver |</a> 
+                <a ng-click="isCollapsed$index = !isCollapsed$index" ng-hide="!isCollapsed$index" class="clickable">Ocultar |</a> 
                 <span ng-show="order.status == 'Pendiente'"><a ng-click="setOrderStatus(order, 'Listo')">Listo</a> |</span>
                 <span ng-show="order.status == 'Listo'"><a ng-click="setOrderStatus(order, 'Entregado')">Entregado</a> |</span>
                 <a ng-click="deleteOrder($index)">Eliminar</a>
